--- a/insurance-tescomobil.css
+++ b/insurance-tescomobil.css
@@ -1,74 +1,68 @@
 
+
+
 nav {
-    position: absolute;
     background-color: white;
-    z-index: 2;
+    padding: 0 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 #my-account {
-    position: absolute;
-    color: red;
-    right: 25px;
-    top: 25px;
-    z-index: 3;
-}
-
-nav img {
-    position: absolute;
+    color: blue;
 }
 
 #red-period {
     color: crimson;
     font-family: tesco modern;
-    font-size: 285%;
-    font-weight: bolder;
-    line-height: 120%;
-    position: absolute;
-    left: 67.6%;
-    top: 260px;
 }
 
 
 header {
+    display: flex;
     background-color: #21539A;
-    position: absolute;
-    top: 75px;
     width: 100%;
-    height: 548px;
+    padding: 60px;
+    height: 450px;
+}
+
+#header-left {
+    width: 50%;
+}
+
+#header-right {
+    width: 50%;
+    align-content: center;
+    padding: 0 200px 0 0;
+}
+
+main {
+    display: flex;
+    width: 100%;
+    padding: 60px;
+}
+
+#main-left {
+    width: 50%;
+}
+
+#main-right {
+    width: 50%;
+    align-content: center;
+    padding: 0 200px 0 0;
 }
 
 header h1 {
+    width: 75%;
     font-family: tesco modern;
     font-size: 285%;
     font-weight: bolder;
-    line-height: 120%;
     color: white;
-    position: absolute;
-    left: 48.3%;
-    top: 150px;
-}
-
-#umbrella-logo {
-    position: absolute;
-    left: 48.3%;
-    top: 73px;
 }
 
 #cracked-phone {
-    position: absolute;
-    left: 80px;
-    top: 58px;
     transform: rotate(-9deg);
-}
-
-p {
-    position: absolute;
-    left: 50%;
-}
-
-h1 {
-    position: absolute;
-    left: 50%;
 }
 
 h2 {
@@ -77,7 +71,6 @@ h2 {
     font-weight: bolder;
     line-height: 120%;
     color: black;
-    position: absolute;
     left: 48.3%;
     top: 670px;
 }
@@ -87,39 +80,82 @@ main p {
     font-size: 100%;
     line-height: 140%;
     color: grey;
-    position: absolute;
-    left: 48.4%;
-    top: 770px;
 }
 
 #get-started-button {
     font-family: tesco modern, Helvetica;
-    font-size: 100%;
+    font-size: 50%;
+    font-weight: normal;
     line-height: 140%;
+    background-color: #499feb;
     color: white;
-    position: absolute;
-    left: 54.5%;
-    top: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    border-radius: 20px;
+    height: 50px;
+    position: relative;
+    top: 50px;
 }
 
 #upload-button {
     font-family: tesco modern, Helvetica;
-    font-size: 100%;
-    line-height: 140%;
-    color: grey;
-    position: absolute;
-    left: 52%;
-    top: 860px;
+    font-size: 110%;
+    font-weight: bolder;
+    background-color: #21539A;
+    color: lightgray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 259.5px;
+    border-radius: 20px;
+    height: 50px;
+    position: relative;
+    top: 50px;
 }
+
+a {
+    font-family: tesco modern;
+    text-decoration: none;
+}
+
+a:visited {
+    color: gray;
+}
+
 
 footer {
-    position: fixed;
+    position: relative;
+    right: 400px;
+    background-color: white;
     margin-left: 0px;
-    bottom: 0;
     width: 100%;
+    height: 200px;
     color: lightgray;
     text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
+#footer-top {
+    position: relative;
+    right: 250px;
+}
 
+#footer-bottom {
+    padding: 10px 0;
+}
+
+.footer-link-spacer {
+    margin: 0 4px;
+
+}
+
+@media only screen and (max-width: 600px) {
+    .footer-link-spacer {
+        display: none;
+        color: red;
+    }
+}
 
